--- a/projects.css
+++ b/projects.css
@@ -38,5 +38,17 @@
     }
     .projects {
         row-gap: 30px;
+        font-size: medium;
+    }
+}
+
+@media (max-width: 500px) {
+    .project {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .projects {
+        row-gap: 30px;
+        font-size: x-small;
     }
 }
